--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
         "react": "^18.2.0",
         "react-app-rewired": "^2.2.1",
         "react-dom": "^18.2.0",
+        "react-hooks": "^1.0.1",
         "react-router-dom": "^5.3.4",
         "react-scripts": "^5.0.1",
+        "react-search-box": "^2.3.0",
+        "react-select-search": "^4.1.6",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
